--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Cathy Dong</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Cathy Dong</h1>
-                        <p class="intro-text">Soa, Carnegie Mellon University</p>
+                        <p class="intro-text">SoA, Carnegie Mellon University</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -104,7 +104,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Portfolio</h2>
                     <p>Check out the projects I did in the past!</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <a src="less/project.html" class="btn btn-default btn-lg">Studio Projects</a>
                 </div>
             </div>
         </div>
