--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>CathyDYH</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Cathy Dong</h1>
-                        <p class="intro-text">Soa, Carnegie Mellon University</p>
+                        <p class="intro-text">SoA, Carnegie Mellon University</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -90,7 +90,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
-                <p>I am from Shanghai, China. Currently, I am an Architecture School in Carnegie Mellon, Pittsburgh (Class of 2021). I have also lived in the state of Maine in High School for 3 years. </p>
+                <p>I come from Shanghai, China. Currently, I am an Architecture School in Carnegie Mellon, Pittsburgh (Class of 2021). I have also lived in the state of Maine in High School for 3 years. </p>
                 <p>I learned skills, such as Rhino, V-ray, Adobe, Autocad, DIVA, Wood Fabrication, Architectural Convention, etc. </p>
                 <p>Other than being an Architecture student, I also love traveling.I enjoy the various historical sites, scenery, food, culture, etc.</p>
             </div>
@@ -104,7 +104,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Portfolio</h2>
                     <p>Check out the projects I did in the past!</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <a href="">Studio Projects</a>
                 </div>
             </div>
         </div>
