--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Portfolio</h2>
                     <p>Check out the projects I did in the past!</p>
-                    <a href="">Studio Projects</a>
+                    <a href="/new.html">Studio Projects</a>
                 </div>
             </div>
         </div>
