--- a/index2.html
+++ b/index2.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<title>CathyDYH</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
+
 <!-- Portfolio Section -->
   <div class="w3-container w3-padding-32" id="Project 1">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Motion Project</h3>
@@ -9,18 +17,24 @@
 
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/img/Object_Final_Contrast.jpg" alt="Object Drawing" style="width:60%">
-      <img src="/img/Cathy_Motion%20Drawing%20Final%20Assembled.jpg" alt="Motion Drawing" style="width:30%">
+      <img src="/img/Object_Final_Contrast.jpg" alt="Object Drawing" style="width:100%">
       <h3>Food Mill Drawings</h3>
       <p class="w3-opacity">Step 1: Drafted Object Drawing</p>
-      <p class="w3-opacity">Step 2: Drafted Motion Drawing</p>
-      <p>The first step is to understand the tool's function and dimension.Then, I visually describe the verbs I picked: rotate, torque, mill, fall, and pile.</p>
+      <p>The first step is to understand the tool's function and dimension.</p>
     </div>
       
+      <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/img/IMG_0878.JPG" alt="Model" style="width:30%">
-      <img src="/img/IMG_0885.JPG" alt="Model" style="width:30%">
-      <img src="/img/IMG_0893.JPG" alt="Model" style="width:30%">
+      <img src="/img/Cathy_Motion%20Drawing%20Final%20Assembled.jpg" alt="Motion Drawing" style="width:100%">
+      <h3>Food Mill Drawings</h3>
+      <p class="w3-opacity">Step 2: Drafted Motion Drawing</p>
+      <p>Then, I visually describe the verbs I picked: rotate, torque, mill, fall, and pile.</p>
+    </div>
+          
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <img src="/img/IMG_0878.JPG" alt="Model" style="width:100%">
+      <img src="/img/IMG_0885.JPG" alt="Model" style="width:100%">
+      <img src="/img/IMG_0893.JPG" alt="Model" style="width:100%">
       <h3>Model Making</h3>
       <p class="w3-opacity">Step 3: Transfer 2D drawings into a 3D model</p>
       <p>The final model is made of wood. It contains various systems. The curved upper part is treated as a subassemblies. Different layers are glued together. It is attached to the middle zig-zag stepping section with two knots. The last three layers, 7/8'' each, is inserted into the base. The base is cut according to the extended lines of the middle part. The base creates a further hierarchy for the stepping. </p>
